grammar.js
    module: $ => seq(
      optional($.shebangComment),
      optional($.moduleHeader),
      repeat(choice($.importClause, $.importGlobClause)),
      repeat($._moduleMember)
    ),

    moduleHeader: $ => seq(
      optional($.docComment),
      repeat($.annotation),
      choice(
        seq($.moduleClause, optional($.extendsOrAmendsClause)),
        $.extendsOrAmendsClause
      ),
    ),

    moduleClause: $ => seq(
      repeat($.modifier),
      "module",
      $.qualifiedIdentifier
    ),

    _moduleMember: $ => choice(
      $.clazz,
      $.typeAlias,
      $.classProperty,
      $.classMethod
    ),

    clazz: $ => seq(
      optional($.docComment),
      repeat($.annotation),
      repeat($.modifier),
      "class",
      $.identifier,
      optional($.typeParameterList),
      optional($.classExtendsClause),
      optional($.classBody)
    ),

    classExtendsClause: $ => seq(
      "extends",
      $.qualifiedIdentifier,
      optional($.typeArgumentList)
    ),

    classBody: $ => seq(
      "{",
      repeat(choice($.classProperty, $.classMethod)),
      "}"
    ),

    classProperty: $ => seq(
      optional($.docComment),
      repeat($.annotation),
      repeat($.modifier),
      $.identifier,
      choice(
        $.typeAnnotation,
        seq(
          optional($.typeAnnotation),
          choice(
            seq("=", $._expr),
            repeat1($.objectBody)
          )
        )
      )
    ),

    classMethod: $ => seq(
      optional($.docComment),
      repeat($.annotation),
      $.methodHeader,
      optional(seq("=", $._expr))
    ),

    methodHeader: $ => seq(
      repeat($.modifier),
      "function",
      $.identifier,
      optional($.typeParameterList),
      $.parameterList,
      optional($.typeAnnotation)
    ),

    annotation: $ => seq(
      "@",
      $.qualifiedIdentifier,
      optional($.objectBody)
    ),

    objectBody: $ => seq(
      "{",
      optional($.objectBodyParameters),
      repeat($._objectMember),
      "}"
    ),

    _objectMember: $ => prec(PREC.OBJ_MEMBER, choice(
      $.objectProperty,
      $.objectMethod,
      $.objectEntry,
      $.objectElement,
      $.memberPredicate,
      $.forGenerator,
      $.whenGenerator,
      $.objectSpread,
    )),

    objectProperty: $ => seq(
      repeat($.modifier),
      $.identifier,
      choice(
        seq(
          optional($.typeAnnotation),
          "=",
          $._expr
        ),
        repeat1($.objectBody)
      )
    ),

    _type: $ => choice(
      alias("unknown", $.unknownType),
      alias("nothing", $.nothingType),
      alias("module", $.moduleType),
      alias("this", $.thisType),
      $.stringLiteralType,
      $.declaredType,
      $.parenthesizedType,
      $.nullableType,
      $.constrainedType,
      $.unionType,
      $.defaultUnionType,
      $.functionLiteralType
    ),

    parameterList: $ => seq(
      '(',
      commaSep($._parameter),
      ')'
    ),

    _parameter: $ => choice($.typedIdentifier, $.blankIdentifier),

    typedIdentifier: $ => seq($.identifier, optional($.typeAnnotation)),

    argumentList: $ => seq(
      alias($._open_argument_paren, '('),
      commaSep($._expr),
      ')'
    ),

    modifier: $ => choice(
      "external",
      "abstract",
      "open",
      "local",
      "hidden",
      "fixed",
      "const"
    ),

    _expr: $ => choice(
      $.thisExpr,
      $.outerExpr,
      $.moduleExpr,
      $.nullLiteralExpr,
      $.trueLiteralExpr,
      $.falseLiteralExpr,
      $.intLiteralExpr,
      $.floatLiteralExpr,
      $.throwExpr,
      $.traceExpr,
      $.importExpr,
      $.readExpr,
      $.unqualifiedAccessExpr,
      $.slStringLiteralExpr,
      $.mlStringLiteralExpr,
      $.newExpr,
      $.amendExpr,
      $.superAccessExpr,
      $.superSubscriptExpr,
      $.qualifiedAccessExpr,
      $.subscriptExpr,
      $.nonNullExpr,
      $.unaryMinusExpr,
      $.logicalNotExpr,
      $.exponentiationExpr,
      $.multiplicativeExpr,
      $.additiveExpr,
      $.comparisonExpr,
      $.typeTestExpr,
      $.typeCastExpr,
      $.equalityExpr,
      $.logicalAndExpr,
      $.logicalOrExpr,
      $.pipeExpr,
      $.nullCoalesceExpr,
      $.ifExpr,
      $.letExpr,
      $.functionLiteralExpr,
      $.parenthesizedExpr,
    ),

    slStringLiteralPart: $ => $._sl_string_chars,

    newExpr: $ => seq("new", optional($._type), $.objectBody),

    qualifiedIdentifier: $ => seq(
      $.identifier,
      repeat(seq(".", $.identifier)),
    ),

    // TODO: adapt to pkl
    identifier: $ => {
      const alpha = /[^\s0-9:;`"'@#.,|^&<=>+\-*/\\%?!~()\[\]{}\uFEFF\u2060\u200B\u00A0]/
      const alpha_numeric = /[^\s:;`"'@#.,|^&<=>+\-*/\\%?!~()\[\]{}\uFEFF\u2060\u200B\u00A0]/

      return token(choice(seq(alpha, repeat(alpha_numeric)), /`[^`]*`/))
    },
